--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1675,7 +1675,7 @@ video{
                onAudioMutedStateChange(localStream.getId());
 		   });
 
-	       navigator.mediaDevices.getUserMedia({ audio: true, video: true })
+	       navigator.mediaDevices.getUserMedia({ audio: true, video: {width:1920,height:1080} })
 		   .then(function(stream) {
 			   client.publish(stream, "agora_local");
 		   })
