--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -1196,7 +1196,7 @@
             onAudioMutedStateChange(localStream.getId());
         });
 
-	    navigator.mediaDevices.getUserMedia({ audio: true, video: {width:1920,height:1080} })
+	    navigator.mediaDevices.getUserMedia({ audio: {deviceId:audioSourceId}, video: {deviceId:videoSourceId,width:1920,height:1080} })
           .then(function(stream) {
               client.publish(stream, "agora_local");
           })
