--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -58,7 +58,7 @@ video{
 	object-fit:cover;
 }
 #big_video video{
-	object-fit:cover !important;
+	object-fit:none !important;
 }
 .video_nocover{
 	object-fit:none;
@@ -1675,7 +1675,7 @@ video{
                onAudioMutedStateChange(localStream.getId());
 		   });
 
-	       navigator.mediaDevices.getUserMedia({ audio: true, video: {width:1920,height:1080} })
+	       navigator.mediaDevices.getUserMedia({ audio: {deviceId:audioSourceId}, video: {deviceId:videoSourceId,width:1920,height:1080} })
 		   .then(function(stream) {
 			   client.publish(stream, "agora_local");
 		   })
