--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1678,7 +1678,7 @@ video{
 			   client.publish(stream, "agora_local");
 		   })
 		   .catch(function(err) {
-
+			   console.log(err);
 		   });
   }
 
