--- a/public/schoolClass/screenVideoInClass.html
+++ b/public/schoolClass/screenVideoInClass.html
@@ -43,7 +43,7 @@
     userId = from=="master"?random(-10000000,-20000000):userId;
 
     $(document).ready(function(){
-        $("#video_name").text(userName);
+        $("#video_name").text(userName+"-桌面");
         var publish = Service.getQueryString("publish");
         if(publish == "true"){
             joinRoom();
@@ -111,7 +111,7 @@
     }
 
     function removeScreenCameraInfo(){
-        var savedList = JSON.parse(localStorage.getItem("usingDeviceList_"+from));
+        var savedList = JSON.parse(localStorage.getItem("usingDeviceList_new_"+from));
 
         if(savedList){
             var tobeDeleteIndex = -1;
@@ -123,7 +123,7 @@
             if(tobeDeleteIndex >= 0){
                 savedList.splice(tobeDeleteIndex,1);
             }
-            localStorage.setItem("usingDeviceList_"+from,JSON.stringify(savedList));
+            localStorage.setItem("usingDeviceList_new_"+from,JSON.stringify(savedList));
         }
     }
 
